--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>This is a local repo</h1>
-<p>we are making a change in the Feature 1 branch.</p>
+<p>we are making a change in the Feature 1 branch. We are adding a dropdown (dropdown)</p>
